--- a/frontend/src/components/diaryform/PersonalInformationAgreementLayout/PersonalInformationAgreementLayout.css
+++ b/frontend/src/components/diaryform/PersonalInformationAgreementLayout/PersonalInformationAgreementLayout.css
@@ -15,7 +15,9 @@
 .toolbar {
     cursor: pointer;
     background-color: #f0f0f0;
-    padding: 10px;
+    margin-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-radius: 5px;
     text-align: center;
     width: 100%;
