feat: 일기 선택 정보 한글로 보내고,  리액트에서 한글도 받기

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,22 @@
     transform: rotate(360deg);
   }
 }
+
+.App {
+  width: 100%; /* 초기에는 100%로 설정 */
+}
+
+@media screen and (min-width: 1023px){
+  .App {
+      width: 50%;
+      margin: 0 auto
+  }
+}
+
+/* 아이패드 이상의 큰 화면에서 너비 50%로 설정 */
+@media screen and (min-width: 768px)  and (max-device-width : 1023px){
+  .App {
+      width: 60%;
+      margin: 0 auto
+  }
+}
