--- a/frontend/src/components/diaryresult/DiaryImageLayout/DiaryImageLayout.css
+++ b/frontend/src/components/diaryresult/DiaryImageLayout/DiaryImageLayout.css
@@ -3,9 +3,7 @@
     position: relative; 
     justify-content: center; 
     align-items: center; 
-    width: 512px; 
-    max-width: 80%;
-    max-height: 80%;
+    width: 90%;
 }
 
 .diary-image {
@@ -15,11 +13,11 @@
 .diary-image-download-button {
     position: absolute; 
     right: 1rem; 
-    bottom: 1rem; 
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem; 
-    padding-left: 1rem;
-    padding-right: 1rem; 
+    bottom: 1rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem; 
+    padding-left: 0.7rem;
+    padding-right: 0.7rem; 
     border-radius: 0.375rem; 
     border-width: 1px; 
     border-color: #D1D5DB; 
